Symfony fixtures for required/appended/prepended

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-append.html.twig
@@ -2,7 +2,10 @@
 {% block body %}
 {{
     form.text({
-        'append': 'foo'
+        'label': 'foo',
+        'name': 'form[field]',
+        'id': 'form_field',
+        'append': 'bar'
     })
 }}
 {% endblock %}
