--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-prepend-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-prepend-append.html.twig
@@ -5,7 +5,8 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-        'prepend': 'bar'
+        'prepend': 'bar',
+        'append': 'baz'
     })
 }}
 {% endblock %}
