--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-required.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-required.html.twig
@@ -5,7 +5,7 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-        'prepend': 'bar'
+        'required': true
     })
 }}
 {% endblock %}
