Reorganise symfony tests to allow separate test files per symfony form type

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/text-required-guidance.html.twig
@@ -3,10 +3,10 @@
 {{
     form.text({
         'label': 'foo',
+        'required': true,
         'id': 'form_field',
         'name': 'form[field]',
-        'guidance': 'foo <span class="bar">bar</span>',
-        'guidance-container': 'baz'
+        'guidance': 'foo <span class="bar">bar</span>'
     })
 }}
 {% endblock %}
