Add Symfony support for textarea and checkbox types

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-guidance.html.twig
@@ -3,7 +3,10 @@
 {{
     form.checkbox({
         'label': 'foo',
-        'guidance': 'bar'
+        'id': 'form_field',
+        'name': 'form[field]',
+        'guidance': 'foo <span class="bar">bar</span>',
+        'value': '1'
     })
 }}
 {% endblock %}
