--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-required-guidance.html.twig
@@ -7,7 +7,7 @@
         'name': 'form[field]',
         'guidance': 'foo <span class="bar">bar</span>',
         'value': '1',
-        'guidance-container': 'baz'
+        'required': true
     })
 }}
 {% endblock %}
