--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-required.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-required.html.twig
@@ -3,11 +3,10 @@
 {{
     form.checkbox({
         'label': 'foo',
-        'id': 'form_field',
         'name': 'form[field]',
-        'guidance': 'foo <span class="bar">bar</span>',
+        'id': 'form_field',
         'value': '1',
-        'guidance-container': 'baz'
+        'required': true
     })
 }}
 {% endblock %}
