--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-guidance-container.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea-guidance-container.html.twig
@@ -3,7 +3,9 @@
 {{
     form.textarea({
         'label': 'foo',
-        'guidance': 'bar',
+        'id': 'form_field',
+        'name': 'form[field]',
+        'guidance': 'foo <span class="bar">bar</span>',
         'guidance-container': 'baz'
     })
 }}
