--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-guidance.html.twig
@@ -3,8 +3,9 @@
 {{
     form.radio({
         'label': 'foo',
-        'name': 'form[field]',
         'id': 'form_field',
+        'name': 'form[field]',
+        'guidance': 'foo <span class="bar">bar</span>',
         'value': '1'
     })
 }}
