--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-help.html.twig
@@ -2,7 +2,11 @@
 {% block body %}
 {{
     form.radio({
-    	'help': 'my help text'
+    	'label': 'foo',
+        'help': 'my help text',
+        'name': 'form[field]',
+        'id': 'form_field',
+        'value': '1',
 	})
 }}
 {% endblock %}
