--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-required.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/radio-required.html.twig
@@ -5,7 +5,8 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-        'value': '1'
+        'value': '1',
+        'required': true
     })
 }}
 {% endblock %}
