Add symfony support for integer and email types

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/email-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/email-append.html.twig
@@ -5,8 +5,8 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-        'type': 'email',
-        'help': 'my help text'
+        'append': 'bar',
+        'type': 'email'
     })
 }}
 {% endblock %}
