--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/email.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/email.html.twig
@@ -2,6 +2,9 @@
 {% block body %}
 {{
     form.text({
+        'label': 'foo',
+        'name': 'form[field]',
+        'id': 'form_field',
         'type': 'email'
     })
 }}
