--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number-help.html.twig
@@ -5,7 +5,7 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-        'type': 'email',
+        'type': 'number',
         'help': 'my help text'
     })
 }}
