--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number-prepend-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/number-prepend-append.html.twig
@@ -5,8 +5,9 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-        'type': 'email',
-        'help': 'my help text'
+        'prepend': 'bar',
+        'append': 'baz',
+        'type': 'number'
     })
 }}
 {% endblock %}
