Add support for symfony passwordType fields

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-guidance-container.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-guidance-container.html.twig
@@ -3,8 +3,10 @@
 {{
     form.password({
         'label': 'foo',
+        'id': 'form_field',
         'name': 'form[field]',
-        'id': 'form_field'
+        'guidance': 'foo <span class="bar">bar</span>',
+        'guidance-container': 'baz'
     })
 }}
 {% endblock %}
