--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-required-guidance.html.twig
@@ -2,10 +2,11 @@
 {% block body %}
 {{
     form.password({
-		'label': 'foo',
-        'name': 'form[field]',
+        'label': 'foo',
+        'required': true,
         'id': 'form_field',
-    	'help': 'my help text'
-	})
+        'name': 'form[field]',
+        'guidance': 'foo <span class="bar">bar</span>'
+    })
 }}
 {% endblock %}
