--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-prepend-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/password-prepend-append.html.twig
@@ -2,10 +2,11 @@
 {% block body %}
 {{
     form.password({
-		'label': 'foo',
+        'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-    	'help': 'my help text'
-	})
+        'prepend': 'bar',
+        'append': 'baz'
+    })
 }}
 {% endblock %}
