Add support for searchType and urlType

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-guidance.html.twig
@@ -2,11 +2,11 @@
 {% block body %}
 {{
     form.text({
-		'label': 'foo',
-        'name': 'form[field]',
+        'label': 'foo',
         'id': 'form_field',
-    	'help': 'my help text',
-        'append': '%'
-	})
+        'name': 'form[field]',
+        'guidance': 'foo <span class="bar">bar</span>',
+        'type': 'search'
+    })
 }}
 {% endblock %}
