--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-required-guidance.html.twig
@@ -3,10 +3,11 @@
 {{
     form.text({
         'label': 'foo',
-        'name': 'form[field]',
+        'required': true,
         'id': 'form_field',
-        'inputmode': 'url',
-        'type': 'text'
+        'name': 'form[field]',
+        'guidance': 'foo <span class="bar">bar</span>',
+        'type': 'search'
     })
 }}
 {% endblock %}
