--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/url-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/url-help.html.twig
@@ -2,8 +2,11 @@
 {% block body %}
 {{
     form.text({
-        'type': 'url',
-        'help': 'my help text'
+        'label': 'foo',
+        'name': 'form[field]',
+        'id': 'form_field',
+        'help': 'my help text',
+        'inputmode': 'url'
     })
 }}
 {% endblock %}
