--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-help.html.twig
@@ -6,7 +6,7 @@
         'name': 'form[field]',
         'id': 'form_field',
     	'help': 'my help text',
-        'append': '%'
+        'type': 'search'
 	})
 }}
 {% endblock %}
