--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-required.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/search-required.html.twig
@@ -2,11 +2,11 @@
 {% block body %}
 {{
     form.text({
-		'label': 'foo',
+        'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-    	'help': 'my help text',
-        'append': '%'
-	})
+        'required': true,
+        'type': 'search'
+    })
 }}
 {% endblock %}
