--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/url-prepend-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/url-prepend-append.html.twig
@@ -2,11 +2,12 @@
 {% block body %}
 {{
     form.text({
-		'label': 'foo',
+        'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
-    	'help': 'my help text',
-        'append': '%'
-	})
+        'prepend': 'bar',
+        'append': 'baz',
+        'inputmode': 'url'
+    })
 }}
 {% endblock %}
