--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-help.html.twig
@@ -2,9 +2,10 @@
 {% block body %}
 {{
     form.range({
-        'label': 'foo',
+		'label': 'foo',
         'name': 'form[field]',
-        'id': 'form_field'
-    })
+        'id': 'form_field',
+    	'help': 'my help text'
+	})
 }}
 {% endblock %}
