--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-prepend-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-prepend-append.html.twig
@@ -4,7 +4,9 @@
     form.range({
         'label': 'foo',
         'name': 'form[field]',
-        'id': 'form_field'
+        'id': 'form_field',
+        'prepend': 'bar',
+        'append': 'baz'
     })
 }}
 {% endblock %}
