--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-required-guidance.html.twig
@@ -3,8 +3,10 @@
 {{
     form.range({
         'label': 'foo',
+        'required': true,
+        'id': 'form_field',
         'name': 'form[field]',
-        'id': 'form_field'
+        'guidance': 'foo <span class="bar">bar</span>'
     })
 }}
 {% endblock %}
