Add support for Symfony tel type

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/tel-prepend-append.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/tel-prepend-append.html.twig
@@ -5,6 +5,8 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
+        'prepend': 'bar',
+        'append': 'baz',
         'type': 'tel'
     })
 }}
