--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/tel-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/tel-required-guidance.html.twig
@@ -3,8 +3,10 @@
 {{
     form.text({
         'label': 'foo',
-        'name': 'form[field]',
+        'required': true,
         'id': 'form_field',
+        'name': 'form[field]',
+        'guidance': 'foo <span class="bar">bar</span>',
         'type': 'tel'
     })
 }}
