--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/tel-prepend.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/tel-prepend.html.twig
@@ -5,6 +5,7 @@
         'label': 'foo',
         'name': 'form[field]',
         'id': 'form_field',
+        'prepend': 'bar',
         'type': 'tel'
     })
 }}
