--- a/views/lexicon/forms/text.html.twig
+++ b/views/lexicon/forms/text.html.twig
@@ -436,7 +436,8 @@
         form.text({
             'id': 'text-28',
             'label': 'Prepended',
-            'prepend': '£'
+            'prepend': 'A really long string',
+            'class': 'form__group--medium'
         })
     }}
 
@@ -444,7 +445,8 @@
         form.text({
             'id': 'text-29',
             'label': 'Appended',
-            'append': '.00'
+            'append': 'A really long string',
+            'class': 'form__group--small'
         })
     }}
 
