WIP for symfony choice fields

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html.twig
@@ -6,17 +6,20 @@
         'options': [
             {
                 'label': 'Foo',
-                'name': 'form[field_one]',
+                'id': 'form_field_1',
+                'name': '1',
                 'value': 'foo'
             },
             {
                 'label': 'Bar',
-                'name': 'form[field_two]',
+                'id': 'form_field_2',
+                'name': '2',
                 'value': 'bar'
             },
             {
                 'label': 'Baz',
-                'name': 'form[field_three]',
+                'id': 'form_field_3',
+                'name': '3',
                 'value': 'baz'
             }
         ]
