--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -114,7 +114,8 @@
         {
           "id"    : "text",
           "label" : "Text",
-          "src"   : tab_text
+          "src"   : tab_text,
+          "active": true
         },
         {
           "id"    : "textarea",
