--- a/stylesheets/_component.input-groups.scss
+++ b/stylesheets/_component.input-groups.scss
@@ -57,6 +57,8 @@
     border: 1px solid $input-group-addon-border-color;
     border-radius: $border-radius;
     display: flex;
+    min-width: 0;
+    overflow: hidden;
     white-space: nowrap;
 
     @include ie-lte(9) {
