Color contrast of dropzone helptext now meet AA contrast

--- a/stylesheets/_component.dropzone.scss
+++ b/stylesheets/_component.dropzone.scss
@@ -93,7 +93,7 @@ $dropzone-icon-rotation: 30deg;
 }
 
 .dropzone__help {
-    color: color(text, help);
+    color: color(text);
     display: inline-block;
     font-size: $font-size-small;
     margin-bottom: 0;
