Choice input type unit tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html.twig
@@ -3,13 +3,8 @@
 {{
     form.choice({
         'label': 'foo',
+        'required': true,
         'options': [
-            {
-                'label': 'None',
-                'id': 'form_field_placeholder',
-                'name': 'placeholder',
-                'value': '0'
-            },
             {
                 'label': 'Foo',
                 'id': 'form_field_0',
